--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>I am an electrical engineering student at the <a href="https://ut.ac.ir/en/"> University of Tehran</a> with a focus on Control engineering and Optimization. Throughout my academic journey, I have gained valuable research experience in the fields of automation, optimization, and multi-agent systems. Drawing from my background in physics and statistics, I've maintained a classical theoretical approach to problem-solving, all the while harnessing modern tools and coding techniques. </p>
               My research interests are <b>Optimization</b>, <b>Distributed systems</b>,<b> Multi-agent Control</b>,<b> Autonomous systems</b> and <b>Robotics</b>.
             
-            </p> I also hold a deep appreciation for art, a love for rock and folk music,
+            </p> I also hold a deep appreciation for art, a love for rock and indie music,
               and a dedication to maintaining a consistent workout routine.</p>
               <div class="col-lg-6">
                 <ul>
@@ -267,7 +267,6 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
