--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
           <div class="col-lg-3">
             <img src="assets/img/GANA.jpg" class="img-fluid" alt="" style="top: 100000px; right: 10000px; width: 120%; height: auto;">
           </div>
+           <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
+           of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
+            multi-agent reinforcement learning approach</a> to address this problem in the most optimal way.
+
+          </p>Additional details will be shared in the future. If you have any questions, please feel free to <b>contact me via email</b> for answers.</p>
+
           
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Autonomous Unmanned Aerial Vehicle Indoor Navigation Based on Deep Learning Approaches.</h3>
