--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
           </div>
            <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
            of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
-            multi-agent reinforcement learning approach</a> to address this problem in the most optimal way.
+            multi-agent reinforcement learning approach</a> to address this problem optimally.</p>
 
-          </p>Additional details will be shared in the future. If you have any questions, please feel free to <b>contact me via email</b> for answers.</p>
+          <p>Additional details will be shared in the future. If you have any questions, please feel free to <b>contact me via email</b> for answers.</p>
 
           
           <div class="col-lg-8 pt-4 pt-lg-0 content">
