--- a/index.html
+++ b/index.html
@@ -114,8 +114,20 @@
            <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
            of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
             multi-agent reinforcement learning approach</a> to address this problem optimally.</p>
+        <p>
+          Recently, we have updated the environment to a strongly-connected, linear, social network with <b>stochastic, stubborn behavior</b>.
+           What makes this environment different is the fact that it will never reach a consensus on its own. Our <b>Multiagent Reinforcement-Learning </b>
+           approach will try to force the system to reach a favorable state of consensus. However, other <b>decentralized programming algorithms</b> are
+            being studied for a better and more generalized answer.
+        </p>
+        <p>
+          In this system, because of the large size of the environment and multiple input edges of the dynamic system, a decentralized controlling system is vital.
+        </p>
+        </p>Additional details will be shared in the future. Codes, results, and details of this research will be posted fully in the corresponding repository
+         <b> after it is submitted and published</b>.
+         However, If you have any questions, please feel free to contact me via <a href="shayan.malekpour99@gmail.com">email</a> for more information.
+        </p>
 
-          <p>Additional details will be shared in the future. If you have any questions, please feel free to <b>contact me via email</b> for answers.</p>
         </div>
 
         <div class="row">
