--- a/index.html
+++ b/index.html
@@ -111,9 +111,22 @@
         <div class="section-title">
           <h2>Publications</h2>
 
-           <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
-           of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
-            multi-agent reinforcement learning approach</a> to address this problem optimally.</p>
+
+          <div class="row">
+          <div class="col-lg-3">
+            <img src="assets/img/MARL.jpg" class="img-fluid" alt="" style="top: 100000px; right: 10000px; width: 150%; height: auto;">
+          </div>
+
+
+          
+        <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <h3>Autonomous Unmanned Aerial Vehicle Indoor Navigation Based on Deep Learning Approaches.</h3>
+          <h4>International Conference on Robotics and Mechatronics. (ICROM)</h4>
+          <h5>present</h5>
+
+         <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
+         of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
+          multi-agent reinforcement learning approach</a> to address this problem optimally.</p>
         <p>
           Recently, we have updated the environment to a strongly-connected, linear, social network with <b>stochastic, stubborn behavior</b>.
            What makes this environment different is the fact that it will never reach a consensus on its own. Our <b>Multiagent Reinforcement-Learning </b>
@@ -128,7 +141,9 @@
          However, If you have any questions, please feel free to contact me via <a href="shayan.malekpour99@gmail.com">email</a> for more information.
         </p>
 
-        </div>
+            
+
+          </div>
 
         <div class="row">
           <div class="col-lg-3">
