--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             <h3>Distributed, Optimized control of a stochastic Non-consensus Opinion dynamic network</h3>
             <h4>Bachelor's thesis</h4>
 
-               Recently, we have updated the environment to a strongly-connected, linear, social network with <b>stochastic, stubborn behavior</b>.
-                What makes this environment different is the fact that it will never reach a consensus on its own. Our <b>Multiagent Reinforcement-Learning </b>
+               Recently, we have updated the environment to a scale-free, linear, social network with <b>stochastic, stubborn behavior</b>.
+                What makes this environment different is the fact that it will never reach a consensus on its own. Our <b>Multi-agent Reinforcement-Learning </b>
                 approach will try to force the system to reach a favorable state of consensus. However, other <b>decentralized programming algorithms</b> are
                  being studied for a better and more generalized answer.
 
