--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
                 </svg>
                 <i class="bx bx-money"></i>
               </div>
-              <h4><a href="https://github.com/shayanmkpr/Gradient_Descent_from_Scratch">Coupled Optimization</a></h4>
-              <p>Portfolio Optimization, decomposition and decentralized optimization (in progress)</p>
+              <h4><a href="https://github.com/shayanmkpr/Decentralized_Portfolio_Optimization/tree/main">Decentralized Optimization</a></h4>
+              <p>This repository explores decentralized portfolio optimization problems and employs two optimization approaches: the Primal Decomposition and ADMM.</p>
             </div>
           </div>
            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
