--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 </svg>
                 <i class="bx bx-grid"></i>
               </div>
-              <h4><a href="https://github.com/shayanmkpr/Decentralized_Portfolio_Optimization/tree/main">Graph Based Distributed Optimization</a></h4>
+              <h4><a href="https://github.com/shayanmkpr/Decentralized_Portfolio_Optimization/tree/main">Maximizing the accuracy of Distributed Ultrasonic Sensor Networks for Object Localization</a></h4>
               <p>Fully Distributed Optimization</p>
             </div>
           </div>
