--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <i class="bx bx-grid"></i>
               </div>
               <h4><a href="https://github.com/shayanmkpr/Decentralized_Portfolio_Optimization/tree/main">Maximizing the accuracy of Distributed Ultrasonic Sensor Networks for Object Localization</a></h4>
-              <p>Fully Distributed Optimization</p>
+              <p>Fully Distributed Optimization (Under development)</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
