--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
         </div>
-        <p> Currently, I am working on my thesis which will be published by January. My research focuses on the <a href="#services">Distributed, Optimized control</a>
+        <p> My current research focuses on the <a href="#services">Distributed, Optimized control</a>
           of a dynamic system composed of multiple agents, each with a linear behavior. We are currently implementing a <a href="#services">decentralized,
            multi-agent reinforcement learning approach</a> to address this problem optimally.</p>
          <p>
@@ -160,7 +160,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Autonomous Unmanned Aerial Vehicle Indoor Navigation Based on Deep Learning Approaches.</h3>
             <h4>International Conference on Robotics and Mechatronics. (ICROM)</h4>
-            <h5>Oct. 2023</h5>
+            <h5><a https://ieeexplore.ieee.org/abstract/document/10412578" https://ieeexplore.ieee.org/abstract/document/10412578</a></h5>
             <p>In this research two deep learning approaches for autonomous drone navigation were introduced. The
               first method uses a convolutional neural network to identify safe paths, while the second employs the
               drone’s camera and generative networks to create depth images. Both methods save costs and energy
