--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Autonomous Unmanned Aerial Vehicle Indoor Navigation Based on Deep Learning Approaches.</h3>
             <h4>International Conference on Robotics and Mechatronics. (ICROM)</h4>
-            <h5><a href = "https://ieeexplore.ieee.org/abstract/document/10412578"> IEEE Xplore</a></h5>
-           <a href="https://github.com/shayanmkpr/Decentralized_Portfolio_Optimization/tree/main">Maximizing the accuracy of Distributed Ultrasonic Sensor Networks for Object Localization</a>
+            <h5><a href = "https://ieeexplore.ieee.org/abstract/document/10412578"> IEEE Xplore link</a></h5>
             
             <p>In this research two deep learning approaches for autonomous drone navigation were introduced. The
               first method uses a convolutional neural network to identify safe paths, while the second employs the
