--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Pytorch</strong> <span>PPO, DDPG & YOLO</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Tensorflow</strong> <span>Keras</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Pytorch</strong></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Tensorflow</strong> <span> Keras </span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>ROS</strong> <span>Robotics OS</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Pandas & GIT</strong> <span></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Pandas & GIT</strong></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
