--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shayan Malekpour</h1>
-      <p> <span class="typed" data-typed-items="Control engineering"></span></p>
+      <p> <span class="typed" data-typed-items="Science Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/shayan-malekpour-625965286/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/shayanmkpr" class="github"><i class="bx bxl-github"></i></a>
