--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
             <p>As an Electrical Engineering graduate specializing in Control Systems from the University of Tehran, I have cultivated a diverse 
               and robust background in optimization, machine learning, and applied mathematics. My strong foundation in applied mathematics and 
               physics was initiated by achieving a Silver Medal in the National Physics Olympiad, which significantly strengthened my expertise 
-              in statistics and mathematics from a young age.
+              in statistics and mathematics from a young age.</p>
 
               My research focuses on Distributed Optimal Control, Multi-agent Reinforcement Learning, Applications of machine learning, and 
               Distributed Convex Optimization, where I have developed and implemented advanced algorithms. I have extensive experience in machine
-              learning techniques, including deep learning, image processing, and predictive modeling, with multiple publications in notable conferences.
+              learning techniques, including deep learning, image processing, and predictive modeling, with multiple publications in notable conferences.</p>
 
               In addition to my research, I have applied my expertise in real-world settings, working as a data scientist and contributing to projects in finance,
               data mining, and robotics. My work has involved developing models and algorithms that enhance decision-making and efficiency in various
-              industries.
+              industries.</p>
 
               Currently, I am actively engaged in ongoing research with multiple teams, continuously exploring new frontiers in technology and optimization and their
               applications in finance, bioinformatics, and communication networks. I am passionate about leveraging my skills to contribute to innovative projects and
