--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Tensorflow</strong> <span> Keras </span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>ROS</strong> <span>Robotics OS</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Pandas</strong></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>S</strong></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>SQL</strong></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
