--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p>As an Electrical Engineering graduate specializing in Control Systems from the University of Tehran, I have cultivated a diverse 
-              and robust background in optimization, machine learning, and applied mathematics. My strong foundation in applied mathematics and 
+              and robust background in <b>Optimization</b>, <b>Machine learning</b>, and <b>Applied mathematics</b>. My strong foundation in applied mathematics and 
               physics was initiated by achieving a Silver Medal in the National Physics Olympiad, which significantly strengthened my expertise 
               in statistics and mathematics from a young age.</p>
 
@@ -100,8 +100,8 @@
               industries.</p>
 
               Currently, I am actively engaged in ongoing research with multiple teams, continuously exploring new frontiers in technology and optimization and their
-              applications in finance, bioinformatics, and communication networks. I am passionate about leveraging my skills to contribute to innovative projects and
-              collaborations that drive progress in both theoretical and practical applications.
+              applications in finance, bioinformatics, and communication networks. <a>href="shayan.malekpour99@gmail.com">I am passionate about leveraging my skills to contribute to innovative projects and
+              collaborations that drive progress in both theoretical and practical applications.</a>
             
             </p> I also hold a deep appreciation for art, a love for rock and indie music,
               and a dedication to maintaining a consistent workout routine.</p>
