--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
               industries.</p>
 
               Currently, I am actively engaged in ongoing research with multiple teams, continuously exploring new frontiers in technology and optimization and their
-              applications in finance, bioinformatics, and communication networks. <a>href="shayan.malekpour99@gmail.com">I am passionate about leveraging my skills to contribute to innovative projects and
+              applications in finance, bioinformatics, and communication networks. <a href="shayan.malekpour99@gmail.com">I am passionate about leveraging my skills to contribute to innovative projects and
               collaborations that drive progress in both theoretical and practical applications.</a>
             
-            </p> I also hold a deep appreciation for art, a love for rock and indie music,
-              and a dedication to maintaining a consistent workout routine.</p>
+            </p> I also hold a deep appreciation for art&#127912, a love for rock and indie music &#129304,
+              and a dedication to maintaining a consistent workout routine &#128170.</p>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>You can Contact me by sending an Email to:</strong> <span>shayan.malekpour99@gmail.com</span></li>
