--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p>As an Electrical Engineering graduate specializing in Machine Learning from the University of Tehran, I have cultivated a diverse 
               and robust background in <b>Optimization</b>, <b>Machine learning</b>, and <b>Applied mathematics</b>. My foundation in applied mathematics and 
-              physics was initiated by achieving a Silver Medal in the National Physics Olympiad, which significantly strengthened my expertise 
-              in statistics and mathematics from a young age.</p>
+              physics was initiated by achieving a Silver Medal in the National Physics Olympiad, which motivated my current research interests and foundation.</p>
 
-              My research focuses on Distributed Optimal Control, Multi-agent Reinforcement Learning, Machine Learning theory, and 
-              Convex Optimization.
+              My research focuses on Machine Learning, Multi-agent Systems, Convex Optimization, and 
+              Computatoinal Neuroscience.
 
               In addition to my research, I have applied my expertise in real-world settings, working as a data scientist and contributing to projects in finance, software development,
               and data mining.
 
-              Currently, I am actively engaged in ongoing research with multiple teams, continuously exploring new frontiers in technology and optimization and their
-              applications Neuro Science, bioinformatics, and Applied Mathematics. <a href="shayan.malekpour99@gmail.com">I am passionate about leveraging my skills to contribute to innovative projects and
+              Currently, I am actively engaged in ongoing research, continuously exploring new frontiers in technology and optimization and their
+              applications Neuro Science, and bioinformatics. <a href="shayan.malekpour99@gmail.com">I am passionate about leveraging my skills to contribute to innovative projects and
               collaborations that drive progress in both theoretical and practical applications.</a>
             
             </p> I also hold a deep appreciation for art&#127912, a love for rock and indie music &#129304,
